Added lore and fixed stack size

--- a/src/main/resources/assets/lang/en_us.json
+++ b/src/main/resources/assets/lang/en_us.json
@@ -1,5 +1,27 @@
 {
-  "block.farmersdelight.cooking_pot": "    Cooking Pot",
+  "item.farmersdelight.cooking_pot": "Cooking Pot",
+  "item.farmersdelight.tomato_seeds": "Tomato Seeds",
+  "item.farmersdelight.tomato": "Tomato",
+  "item.farmersdelight.rotten_tomato": "Rotten Tomato",
+  "item.farmersdelight.rice": "Rice",
+  "item.farmersdelight.rice_panicle": "Rice Panicle",
+  "item.farmersdelight.cabbage_seeds": "Cabbage Seeds",
+  "item.farmersdelight.cabbage": "Cabbage",
+  "item.farmersdelight.onion": "Onion",
+  "item.farmersdelight.cooked_rice": "Cooked Rice",
+  "block.farmersdelight.cooking_pot": "Cooking Pot",
+  "block.farmersdelight.beetroot_crate": "Beetroot Crate",
+  "block.farmersdelight.carrot_crate": "Carrot Crate",
+  "block.farmersdelight.potato_crate": "Potato Crate",
+  "block.farmersdelight.tomato_crate": "Tomato Crate",
+  "block.farmersdelight.cabbage_crate": "Cabbage Crate",
+  "block.farmersdelight.onion_crate": "Onion Crate",
+  "block.farmersdelight.rice_bag": "Bag of Rice",
+  "block.farmersdelight.rice_bale": "Rice Bale",
+  "block.farmersdelight.muddy_farmland": "Muddy Farmland",
+  "menu.farmersdelight.served_on": "Served on:",
+  "menu.farmersdelight.hold_serving": "Hold {amount} serving{s} of:",
+  "menu.farmersdelight.empty": "Empty",
   "menu.farmersdelight.heated": "Heated",
   "menu.farmersdelight.need_heat": "Need heat from below"
 }
