--- a/src/main/resources/assets/lang/vi_vn.json
+++ b/src/main/resources/assets/lang/vi_vn.json
@@ -19,8 +19,9 @@
   "block.farmersdelight.safety_net": "Lưới an toàn",
   "block.farmersdelight.canvas_rug": "Thảm vải",
   "block.farmersdelight.tatami": "Khối Tatami",
-  "block.farmersdelight.full_tatami_mat": "Chiếu Tatami đầy đủ",
-  "block.farmersdelight.half_tatami_mat": "Một nửa tấm chiếu Tatami",
+  "block.farmersdelight.full_tatami_mat": "Tấm Tatami",
+  "block.farmersdelight.full_tatami_mat_head": "Tấm Tatami",
+  "block.farmersdelight.half_tatami_mat": "Nửa tấm Tatami",
   "block.farmersdelight.organic_compost": "Phân hữu cơ",
   "block.farmersdelight.rich_soil": "Đất màu mỡ",
   "block.farmersdelight.rich_soil_farmland": "Đất ruộng giàu dinh dưỡng",
