--- a/src/main/resources/assets/lang/vi_vn.json
+++ b/src/main/resources/assets/lang/vi_vn.json
@@ -217,7 +217,7 @@
 
   "farmersdelight.container.recipe_book.cookable": "Hiển thị có thể nấu được",
   "farmersdelight.container.cooking_pot": "Nồi nấu ăn",
-  "farmersdelight.container.cooking_pot.served_on": "Nguồn nhiệt: %s",
+  "farmersdelight.container.cooking_pot.served_on": "Cần vật đựng: %s",
   "farmersdelight.container.cooking_pot.not_heated": "Cần nguồn nhiệt từ bên dưới",
   "farmersdelight.container.cooking_pot.heated": "Đã nóng",
   "farmersdelight.container.basket": "Giỏ",
